{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 56,
  "lineage": "30144ec7-4c3f-8a91-c204-2b763b75d851",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "airbyte-instance",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "airbyte-instance",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20240312",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/zones/us-west1-b/disks/airbyte-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/atlis-data-workshop/zones/us-west1-b/instances/airbyte-instance",
            "instance_id": "6282157102549510052",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "startup-script": "#!/bin/bash\n\nsudo apt-get update\nsudo apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common\ncurl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add --\nsudo add-apt-repository \\\"deb [arch=amd64] https://download.docker.com/linux/debian buster stable\\\"\nsudo apt-get update\nsudo apt-get install -y docker-ce docker-ce-cli containerd.io\nsudo usermod -a -G docker $USER\nsudo apt-get -y install docker [...]
            },
            "metadata_fingerprint": "jIIBFFv_-RA=",
            "name": "airbyte-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
                "network_ip": "10.10.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/regions/us-west1/subnetworks/my-custom-subnet-2",
                "subnetwork_project": "atlis-data-workshop"
              }
            ],
            "project": "atlis-data-workshop",
            "reservation_affinity": [
              {
                "type": "ANY_RESERVATION"
              }
            ],
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/zones/us-west1-b/instances/airbyte-instance",
            "service_account": [
              {
                "email": "my-custom-sa@atlis-data-workshop.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "airbyte",
              "lb-health-check"
            ],
            "tags_fingerprint": "rzShIyo_aek=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "module.instances.google_service_account.default"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "metabase-instance",
      "provider": "module.instances.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "metabase-instance",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20240312",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/zones/us-west1-b/disks/metabase-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/atlis-data-workshop/zones/us-west1-b/instances/metabase-instance",
            "instance_id": "7476613702572648356",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "startup-script": "#!/bin/bash\n\n# Update and install necessary packages\nsudo apt-get update\nsudo apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common\ncurl -fsSL https://download.docker.com/linux/debian/gpg | sudo apt-key add -\nsudo add-apt-repository \"deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable\"\nsudo apt-get update\nsudo apt-get install -y docker-ce docker-ce-cli containerd.io\nsudo usermod -a [...]
            },
            "metadata_fingerprint": "vj8Se-DK9xM=",
            "name": "metabase-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/regions/us-west1/subnetworks/my-custom-subnet-2",
                "subnetwork_project": "atlis-data-workshop"
              }
            ],
            "project": "atlis-data-workshop",
            "reservation_affinity": [
              {
                "type": "ANY_RESERVATION"
              }
            ],
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/zones/us-west1-b/instances/metabase-instance",
            "service_account": [
              {
                "email": "my-custom-sa@atlis-data-workshop.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "lb-health-check",
              "metabase"
            ],
            "tags_fingerprint": "gyjsT6w8fhI=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "module.instances.google_service_account.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "airbyte_backend",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/zones/us-west1-b/instanceGroups/airbyte-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-03-27T15:10:44.234-07:00",
            "enable_cdn": false,
            "fingerprint": "1MoSDCIIUG8=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/healthChecks/airbyte-health-check"
            ],
            "id": "projects/atlis-data-workshop/global/backendServices/airbyte-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "locality_lb_policy": "ROUND_ROBIN",
            "name": "airbyte-backend",
            "port_name": "airbyte",
            "project": "atlis-data-workshop",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/backendServices/airbyte-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.healthChecks.google_compute_health_check.airbyte-health-check",
            "module.instances.google_compute_instance.airbyte-instance",
            "module.instances.google_compute_instance_group.airbyte-instance-group",
            "module.instances.google_service_account.default",
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "metabase_backend",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/zones/us-west1-b/instanceGroups/metabase-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-03-27T15:10:44.615-07:00",
            "enable_cdn": false,
            "fingerprint": "SusiHYLoKgw=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/healthChecks/metabase-health-check"
            ],
            "id": "projects/atlis-data-workshop/global/backendServices/metabase-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "locality_lb_policy": "ROUND_ROBIN",
            "name": "metabase-backend",
            "port_name": "metabase",
            "project": "atlis-data-workshop",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/backendServices/metabase-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.healthChecks.google_compute_health_check.metabase-health-check",
            "module.instances.google_compute_instance.metabase-instance",
            "module.instances.google_compute_instance_group.metabase-instance-group",
            "module.instances.google_service_account.default",
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-health-check-airbyte",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-27T15:08:59.154-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/atlis-data-workshop/global/firewalls/allow-health-check-airbyte",
            "log_config": [],
            "name": "allow-health-check-airbyte",
            "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
            "priority": 1000,
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/firewalls/allow-health-check-airbyte",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "airbyte"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-health-check-metabase",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-27T15:08:59.120-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/atlis-data-workshop/global/firewalls/allow-health-check-metabase",
            "log_config": [],
            "name": "allow-health-check-metabase",
            "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
            "priority": 1000,
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/firewalls/allow-health-check-metabase",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "metabase"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom-allow-http",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-27T15:08:59.144-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/atlis-data-workshop/global/firewalls/custom-allow-http",
            "log_config": [],
            "name": "custom-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
            "priority": 1000,
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/firewalls/custom-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom-allow-https",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-27T15:08:59.141-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/atlis-data-workshop/global/firewalls/custom-allow-https",
            "log_config": [],
            "name": "custom-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
            "priority": 1000,
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/firewalls/custom-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom-allow-icmp",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-03-27T15:08:59.250-07:00",
            "deny": [],
            "description": "Allow ICMP from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/atlis-data-workshop/global/firewalls/custom-allow-icmp",
            "log_config": [],
            "name": "custom-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
            "priority": 65534,
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/firewalls/custom-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom-allow-rdp",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-27T15:08:59.134-07:00",
            "deny": [],
            "description": "Allow RDP from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/atlis-data-workshop/global/firewalls/custom-allow-rdp",
            "log_config": [],
            "name": "custom-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
            "priority": 65534,
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/firewalls/custom-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom-allow-ssh",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-27T15:08:59.134-07:00",
            "deny": [],
            "description": "Allow SSH from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/atlis-data-workshop/global/firewalls/custom-allow-ssh",
            "log_config": [],
            "name": "custom-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
            "priority": 65534,
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/firewalls/custom-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "airbyte-lb-ipv4",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.227.248.236",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-27T15:09:21.479-07:00",
            "id": "projects/atlis-data-workshop/global/addresses/airbyte-lb-ipv4",
            "name": "airbyte-lb-ipv4",
            "prefix_length": 0,
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/addresses/airbyte-lb-ipv4"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "metabase-lb-ipv4",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.158.201",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-27T15:09:21.345-07:00",
            "id": "projects/atlis-data-workshop/global/addresses/metabase-lb-ipv4",
            "name": "metabase-lb-ipv4",
            "prefix_length": 0,
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/addresses/metabase-lb-ipv4"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "airbyte_frontend_forwarding_rule",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/atlis-data-workshop/global/forwardingRules/airbyte-frontend-forwarding-rule",
            "ip_address": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/addresses/airbyte-lb-ipv4",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "airbyte-frontend-forwarding-rule",
            "port_range": "80",
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/forwardingRules/airbyte-frontend-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/targetHttpProxies/airbyte-frontend-target-proxy"
          },
          "dependencies": [
            "module.network.google_compute_global_address.airbyte-lb-ipv4",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.my-custom-subnet",
            "module.network.google_compute_target_http_proxy.airbyte_frontend_target_proxy",
            "module.network.google_compute_url_map.airbyte_frontend_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "airbyte_frontend_https",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/atlis-data-workshop/global/forwardingRules/airbyte-frontend",
            "ip_address": "35.227.248.236",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "airbyte-frontend",
            "port_range": "443",
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/forwardingRules/airbyte-frontend",
            "target": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/targetHttpsProxies/airbyte-https-target-proxy"
          },
          "dependencies": [
            "module.healthChecks.google_compute_health_check.airbyte-health-check",
            "module.instances.google_compute_instance.airbyte-instance",
            "module.instances.google_compute_instance_group.airbyte-instance-group",
            "module.instances.google_service_account.default",
            "module.network.google_compute_backend_service.airbyte_backend",
            "module.network.google_compute_global_address.airbyte-lb-ipv4",
            "module.network.google_compute_managed_ssl_certificate.airbyte-cert",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.my-custom-subnet",
            "module.network.google_compute_target_https_proxy.airbyte_https_target_proxy",
            "module.network.google_compute_url_map.airbyte_https"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "metabase_frontend_forwarding_rule",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/atlis-data-workshop/global/forwardingRules/metabase-frontend-forwarding-rule",
            "ip_address": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/addresses/metabase-lb-ipv4",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "metabase-frontend-forwarding-rule",
            "port_range": "80",
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/forwardingRules/metabase-frontend-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/targetHttpProxies/metabase-frontend-target-proxy"
          },
          "dependencies": [
            "module.network.google_compute_global_address.metabase-lb-ipv4",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.my-custom-subnet",
            "module.network.google_compute_target_http_proxy.metabase_frontend_target_proxy",
            "module.network.google_compute_url_map.metabase_frontend_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "metabase_frontend_https",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/atlis-data-workshop/global/forwardingRules/metabase-frontend",
            "ip_address": "34.120.158.201",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "metabase-frontend",
            "port_range": "443",
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/forwardingRules/metabase-frontend",
            "target": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/targetHttpsProxies/metabase-https-target-proxy"
          },
          "dependencies": [
            "module.healthChecks.google_compute_health_check.metabase-health-check",
            "module.instances.google_compute_instance.metabase-instance",
            "module.instances.google_compute_instance_group.metabase-instance-group",
            "module.instances.google_service_account.default",
            "module.network.google_compute_backend_service.metabase_backend",
            "module.network.google_compute_global_address.metabase-lb-ipv4",
            "module.network.google_compute_managed_ssl_certificate.metabase-cert",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.my-custom-subnet",
            "module.network.google_compute_target_https_proxy.metabase_https_target_proxy",
            "module.network.google_compute_url_map.metabase_https"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/atlis-data-workshop/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "project": "atlis-data-workshop",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T15:08:59.458-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/atlis-data-workshop/regions/us-west1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
            "project": "atlis-data-workshop",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/regions/us-west1/routers/nat-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "atlis-data-workshop/us-west1/nat-router/my-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "atlis-data-workshop",
            "region": "us-west1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.my-custom-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my-custom-subnet",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T15:08:38.096-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/atlis-data-workshop/regions/us-west1/subnetworks/my-custom-subnet-2",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "my-custom-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "atlis-data-workshop",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/regions/us-west1/subnetworks/my-custom-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "airbyte_frontend_target_proxy",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T15:08:26.331-07:00",
            "id": "projects/atlis-data-workshop/global/targetHttpProxies/airbyte-frontend-target-proxy",
            "name": "airbyte-frontend-target-proxy",
            "project": "atlis-data-workshop",
            "proxy_bind": false,
            "proxy_id": 1634703223546258997,
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/targetHttpProxies/airbyte-frontend-target-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/urlMaps/airbyte-frontend-redirect"
          },
          "dependencies": [
            "module.network.google_compute_url_map.airbyte_frontend_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "metabase_frontend_target_proxy",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T15:08:26.737-07:00",
            "id": "projects/atlis-data-workshop/global/targetHttpProxies/metabase-frontend-target-proxy",
            "name": "metabase-frontend-target-proxy",
            "project": "atlis-data-workshop",
            "proxy_bind": false,
            "proxy_id": 3058420749718595125,
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/targetHttpProxies/metabase-frontend-target-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/urlMaps/metabase-frontend-redirect"
          },
          "dependencies": [
            "module.network.google_compute_url_map.metabase_frontend_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "airbyte_https_target_proxy",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T15:11:28.339-07:00",
            "id": "projects/atlis-data-workshop/global/targetHttpsProxies/airbyte-https-target-proxy",
            "name": "airbyte-https-target-proxy",
            "project": "atlis-data-workshop",
            "proxy_bind": false,
            "proxy_id": 3369726756791068543,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/targetHttpsProxies/airbyte-https-target-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/sslCertificates/airbyte-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/urlMaps/airbyte-https"
          },
          "dependencies": [
            "module.healthChecks.google_compute_health_check.airbyte-health-check",
            "module.instances.google_compute_instance.airbyte-instance",
            "module.instances.google_compute_instance_group.airbyte-instance-group",
            "module.instances.google_service_account.default",
            "module.network.google_compute_backend_service.airbyte_backend",
            "module.network.google_compute_global_address.airbyte-lb-ipv4",
            "module.network.google_compute_managed_ssl_certificate.airbyte-cert",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.my-custom-subnet",
            "module.network.google_compute_url_map.airbyte_https"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "metabase_https_target_proxy",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T15:11:18.749-07:00",
            "id": "projects/atlis-data-workshop/global/targetHttpsProxies/metabase-https-target-proxy",
            "name": "metabase-https-target-proxy",
            "project": "atlis-data-workshop",
            "proxy_bind": false,
            "proxy_id": 6959024109945169769,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/targetHttpsProxies/metabase-https-target-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/sslCertificates/metabase-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/urlMaps/metabase-https"
          },
          "dependencies": [
            "module.healthChecks.google_compute_health_check.metabase-health-check",
            "module.instances.google_compute_instance.metabase-instance",
            "module.instances.google_compute_instance_group.metabase-instance-group",
            "module.instances.google_service_account.default",
            "module.network.google_compute_backend_service.metabase_backend",
            "module.network.google_compute_global_address.metabase-lb-ipv4",
            "module.network.google_compute_managed_ssl_certificate.metabase-cert",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.my-custom-subnet",
            "module.network.google_compute_url_map.metabase_https"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "airbyte_frontend_redirect",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T15:08:14.789-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "Automatically generated HTTP to HTTPS redirect for the airbyte-frontend forwarding rule",
            "fingerprint": "erhWCDWwWuo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/atlis-data-workshop/global/urlMaps/airbyte-frontend-redirect",
            "map_id": 1827221262823925281,
            "name": "airbyte-frontend-redirect",
            "path_matcher": [],
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/urlMaps/airbyte-frontend-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "airbyte_https",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T15:11:16.964-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/backendServices/airbyte-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "94alKbGQklM=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/atlis-data-workshop/global/urlMaps/airbyte-https",
            "map_id": 4037424730564274027,
            "name": "airbyte-https",
            "path_matcher": [],
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/urlMaps/airbyte-https",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.healthChecks.google_compute_health_check.airbyte-health-check",
            "module.instances.google_compute_instance.airbyte-instance",
            "module.instances.google_compute_instance_group.airbyte-instance-group",
            "module.instances.google_service_account.default",
            "module.network.google_compute_backend_service.airbyte_backend",
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "metabase_frontend_redirect",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T15:08:15.502-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "Automatically generated HTTP to HTTPS redirect for the metabase-frontend forwarding rule",
            "fingerprint": "5eIJWtGya8Q=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/atlis-data-workshop/global/urlMaps/metabase-frontend-redirect",
            "map_id": 1717727187645834784,
            "name": "metabase-frontend-redirect",
            "path_matcher": [],
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/urlMaps/metabase-frontend-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "metabase_https",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-03-27T15:11:07.319-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/backendServices/metabase-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Iz-cmOXKzKg=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/atlis-data-workshop/global/urlMaps/metabase-https",
            "map_id": 1581836883416655765,
            "name": "metabase-https",
            "path_matcher": [],
            "project": "atlis-data-workshop",
            "self_link": "https://www.googleapis.com/compute/v1/projects/atlis-data-workshop/global/urlMaps/metabase-https",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.healthChecks.google_compute_health_check.metabase-health-check",
            "module.instances.google_compute_instance.metabase-instance",
            "module.instances.google_compute_instance_group.metabase-instance-group",
            "module.instances.google_service_account.default",
            "module.network.google_compute_backend_service.metabase_backend",
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}